--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -4,6 +4,8 @@
         <link rel="shortcut icon" href="..\img\youtube.ico">
         <link href="style.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="tab.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="tab.css">
         <script src="https://kit.fontawesome.com/760c40f62e.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -439,7 +441,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <div class="title">This is Youtube Video</div>
+                            <div class="title">유튜브 영상</div>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -455,7 +457,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youtube video!!!</span>
+                            <span class="title">유튜브 영상</span>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -471,7 +473,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <div class="title">looooooong title! 가나다라마바사아자차카타파하 1234567890 ABCDEFGHIJKLMNOPQRSTUVWXYZ</div>
+                            <div class="title">유튜브 영상</div>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -487,7 +489,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youtube video!!!</span>
+                            <span class="title">유튜브 영상</span>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -503,7 +505,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youtube video!!!</span>
+                            <span class="title">유튜브 영상 ㄱㄴㄷㄹㅁㅂㅅㅇㅈㅊㅋㅌㅍㅎ 1234567890</span>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -519,7 +521,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youtube video!!!</span>
+                            <span class="title">유튜브 영상</span>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
