--- a/sns/video.html
+++ b/sns/video.html
@@ -516,6 +516,157 @@
                 </div>
             </div>
             <div class="moreVideo">
+                <div class="category">
+                    <a>모두</a>
+                    <a>관련 콘텐츠</a>
+                    <a>유튜브 제공</a>
+                    <a>실시간</a>
+                    <a>게임</a>
+                    <a>최근에 업로드된 동영상</a>
+                    <a>감상한 동영상</a>
+                </div>
+                <div class="contents">
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                    <a href="#" class="contents-video">
+                        <div class="contents-thumbnail">
+                            <img src="..\img\thumbnail.png">
+                        </div>
+                        <div class="contents-info">
+                            <span class="contents-title">유튜브 영상</span>
+                            <span class="contents-channel">유튜브 채널</span>
+                            <span class="contents-view">조쇠후 10만회 ⦁ 1시간 전</span>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
         <script src="script.js"></script>
