--- a/sns/video.html
+++ b/sns/video.html
@@ -516,14 +516,20 @@
                 </div>
             </div>
             <div class="moreVideo">
-                <div class="category">
-                    <a>모두</a>
-                    <a>관련 콘텐츠</a>
-                    <a>유튜브 제공</a>
-                    <a>실시간</a>
-                    <a>게임</a>
-                    <a>최근에 업로드된 동영상</a>
-                    <a>감상한 동영상</a>
+                <div class="category-section">
+                    <div class="category" style="transform: translateX(0px);">
+                        <a>모두</a>
+                        <a>관련 콘텐츠</a>
+                        <a>유튜브 제공</a>
+                        <a>실시간</a>
+                        <a>게임</a>
+                        <a>최근에 업로드된 동영상</a>
+                        <a>감상한 동영상</a>
+                    </div>
+                    <div class="next">
+                        <div class="next-gradient"></div>
+                        <a class="next-button"><i class="fa-solid fa-angle-right"></i></a>
+                    </div>
                 </div>
                 <div class="contents">
                     <a href="#" class="contents-video">
