--- a/sns/video.html
+++ b/sns/video.html
@@ -526,6 +526,10 @@
                         <a>최근에 업로드된 동영상</a>
                         <a>감상한 동영상</a>
                     </div>
+                    <div class="back" style="visibility: hidden">
+                        <a class="back-button"><i class="fa-solid fa-angle-left"></i></a>
+                        <div class="back-gradient"></div>
+                    </div>
                     <div class="next">
                         <div class="next-gradient"></div>
                         <a class="next-button"><i class="fa-solid fa-angle-right"></i></a>
