--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -2,10 +2,15 @@
     <head>
         <title>YouTube</title>
         <link rel="shortcut icon" href="..\img\youtube.ico">
+
         <link href="style.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
+
+        <link href="guide.css" rel="stylesheet">
+
         <link href="tab.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="tab.css">
+
+        <link href="header.css" rel="stylesheet">
+
         <script src="https://kit.fontawesome.com/760c40f62e.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -533,5 +538,6 @@
             </a>
         </div>
         <script src="script.js"></script>
+        <script src="guide.js"></script>
     </body>
 </html>
