--- a/element/element.html
+++ b/element/element.html
@@ -459,7 +459,7 @@
         <div class="lore">
             <div class="lore-box">
                 <div class="lore-element">
-                    <div class="lore-number">12</div>
+                    <div class="lore-number">123    </div>
                     <div class="lore-sign">Rb</div>
                     <div class="lore-name">루비듐</div>
                     <div class="lore-Ename">Hello</div>
@@ -476,7 +476,12 @@
                 </div>
             </div>
             <div class="explanation">
-                설명글
+                <div class="text">
+                    asdfasdfasdfasdf
+                </div>
+                <div class="picture">
+                    <img src="..\element\img\He.png">
+                </div>
             </div>
         </div>
         <script src="element.js"></script>
