--- a/element/element.html
+++ b/element/element.html
@@ -61,28 +61,28 @@
             <div class="element-alkali1 element-box">
                 <div class="number">11</div>
                 <div class="sign">Na</div>
-                <div class="element">수소</div>
+                <div class="element">나트륨</div>
             </div>
             <div class="element-alkali2 element-box">
                 <div class="number">12</div>
                 <div class="sign">Mg</div>
-                <div class="element">나트륨</div>
+                <div class="element">마그네슘</div>
             </div>
             <a class="element-none2"></a>
             <div class="element-transition2 element-box">
                 <div class="number">13</div>
                 <div class="sign">Al</div>
-                <div class="element">마그네슘</div>
+                <div class="element">알류미늄</div>
             </div>
             <div class="element-metalloid element-box">
                 <div class="number">14</div>
                 <div class="sign">Si</div>
-                <div class="element">알루미늄</div>
+                <div class="element">규소</div>
             </div>
             <div class="element-nonmetal element-box">
                 <div class="number">15</div>
                 <div class="sign">P</div>
-                <div class="element">규소</div>
+                <div class="element">인</div>
             </div>
             <div class="element-nonmetal element-box">
                 <div class="number">16</div>
@@ -92,7 +92,7 @@
             <div class="element-nonmetal element-box">
                 <div class="number">17</div>
                 <div class="sign">Cl</div>
-                <div class="element">인</div>
+                <div class="element">염소</div>
             </div>
             <div class="element-noble element-box">
                 <div class="number">18</div>
@@ -459,7 +459,7 @@
         <div class="lore">
             <div class="lore-box">
                 <div class="lore-element">
-                    <div class="lore-number">123    </div>
+                    <div class="lore-number">123</div>
                     <div class="lore-sign">Rb</div>
                     <div class="lore-name">루비듐</div>
                     <div class="lore-Ename">Hello</div>
@@ -480,9 +480,12 @@
                     asdfasdfasdfasdf
                 </div>
                 <div class="picture">
-                    <img src="..\element\img\He.png">
+                    <img class="img">
                 </div>
             </div>
+            <button class="exitButton">X</button>
+        </div>
+        <div class="backboard">
         </div>
         <script src="element.js"></script>
     </body>
