--- a/element/element.html
+++ b/element/element.html
@@ -256,7 +256,7 @@
             </div>
             <div class="element-transition2 element-box">
                 <div class="number">50</div>
-                <div class="sign">Sc</div>
+                <div class="sign">Sn</div>
                 <div class="element">주석</div>
             </div>
             <div class="element-metalloid element-box">
@@ -465,23 +465,12 @@
                     <div class="lore-Ename">Hello</div>
                 </div>
                 <div class="lore-detail">
-                    <div>원자번호 <div class="value">1</div></div>
-                    <div>원자반지름 <div class="value">12</div></div>
-                    <div>산화 상태 <div class="value">123</div></div>
-                    <div>원자량 <div class="value">1234</div></div>
-                    <div>녹는점 <div class="value">12345</div></div>
-                    <div>끓는점 <div class="value">123456</div></div>
-                    <div>밀도 <div class="value">1234567</div></div>
-                    <div>전자구조 <div class="value">12345678</div></div>
+                    <div>전자 수 <div class="value">1</div></div>
+                    <img class="img">
                 </div>
             </div>
             <div class="explanation">
-                <div class="text">
-                    asdfasdfasdfasdf
-                </div>
-                <div class="picture">
-                    <img class="img">
-                </div>
+                설명글
             </div>
             <button class="exitButton">X</button>
         </div>
