--- a/element/element.html
+++ b/element/element.html
@@ -2,7 +2,6 @@
     <head>
         <link href="element.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="element.css">
-        <script src="https://kit.fontawesome.com/760c40f62e.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="background">
@@ -465,7 +464,7 @@
                     <div class="lore-Ename">Hello</div>
                 </div>
                 <div class="lore-detail">
-                    <div>전자 수 <div class="value">1</div></div>
+                    <div class="energy">전자 수 <div class="value">1</div></div>
                     <img class="img">
                 </div>
             </div>
