--- a/element/element.html
+++ b/element/element.html
@@ -10,7 +10,7 @@
                 <div class="sign">H</div>
                 <div class="element">수소</div>
             </div>
-            <a class="element-none1 "></a>
+            <a class="element-none1"></a>
             <div class="element-noble element-box">
                 <div class="number">2</div>
                 <div class="sign">He</div>
@@ -453,6 +453,160 @@
                 <div class="number">118</div>
                 <div class="sign">Og</div>
                 <div class="element">오가네손</div>
+            </div>
+            <div class="gap"></div>
+            <a class="element-none3"></a>
+            <div class="element-lanthanum element-box">
+                <div class="number">57</div>
+                <div class="sign">La</div>
+                <div class="element">란타넘</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">58</div>
+                <div class="sign">Ce</div>
+                <div class="element">세륨</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">59</div>
+                <div class="sign">Pr</div>
+                <div class="element long">프라세오디뮴</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">60</div>
+                <div class="sign">Nd</div>
+                <div class="element">네오디뮴</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">61</div>
+                <div class="sign">Pm</div>
+                <div class="element">프로메튬</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">62</div>
+                <div class="sign">Sm</div>
+                <div class="element">사마륨</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">63</div>
+                <div class="sign">Eu</div>
+                <div class="element">유로퓸</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">64</div>
+                <div class="sign">Gd</div>
+                <div class="element">가돌리늄</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">65</div>
+                <div class="sign">Tb</div>
+                <div class="element">터븀</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">66</div>
+                <div class="sign">Dy</div>
+                <div class="element">디스프로슘</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">67</div>
+                <div class="sign">Ho</div>
+                <div class="element">홀뮴</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">68</div>
+                <div class="sign">Er</div>
+                <div class="element">어븀</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">69</div>
+                <div class="sign">Tm</div>
+                <div class="element">툴륨</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">70</div>
+                <div class="sign">Yb</div>
+                <div class="element">이터븀</div>
+            </div>
+            <div class="element-lanthanum element-box">
+                <div class="number">71</div>
+                <div class="sign">Lu</div>
+                <div class="element">루테튬</div>
+            </div>
+
+            <a class="element-none3"></a>
+            <div class="element-actinium element-box">
+                <div class="number">89</div>
+                <div class="sign">Ac</div>
+                <div class="element">악티늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">90</div>
+                <div class="sign">Th</div>
+                <div class="element">토륨</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">91</div>
+                <div class="sign">Pa</div>
+                <div class="element long">프로트악티늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">92</div>
+                <div class="sign">U</div>
+                <div class="element">우라늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">93</div>
+                <div class="sign">Np</div>
+                <div class="element">넵투늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">94</div>
+                <div class="sign">Pu</div>
+                <div class="element">플루토늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">95</div>
+                <div class="sign">Am</div>
+                <div class="element">아메리슘</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">96</div>
+                <div class="sign">Cm</div>
+                <div class="element">퀴륨</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">97</div>
+                <div class="sign">Bk</div>
+                <div class="element">버클륨</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">98</div>
+                <div class="sign">Cf</div>
+                <div class="element">캘리포늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">99</div>
+                <div class="sign">Es</div>
+                <div class="element long">아인슈타이늄</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">100</div>
+                <div class="sign">Fm</div>
+                <div class="element">페르뮴</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">101</div>
+                <div class="sign">Md</div>
+                <div class="element">멘델레븀</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">102</div>
+                <div class="sign">No</div>
+                <div class="element">노벨륨</div>
+            </div>
+            <div class="element-actinium element-box">
+                <div class="number">103</div>
+                <div class="sign">Lr</div>
+                <div class="element">로렌슘</div>
             </div>
         </div>
         <div class="lore">
